[package]
name = "OS-With-Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# disabling unwinding on dev and release target
[profile.dev]
panic = "abort" #this needs to be disable for cargo test

[profile.release]
panic = "abort" #this needs to be disable for cargo test

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args=["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
